--- a/TP1/BackendAPI/notsosimpleapi/src/main/resources/application.yml
+++ b/TP1/BackendAPI/notsosimpleapi/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     generate-ddl: false
     open-in-view: true
   datasource:
-    url: jdbc:postgresql://${DB_SERVER}/${DB_NAME}
+    url: jdbc:postgresql://${DB_SERVER}:5432/${DB_NAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
