--- a/TP1/HTTPServer/my-conf.conf
+++ b/TP1/HTTPServer/my-conf.conf
@@ -104,8 +104,8 @@ LogLevel warn
 <VirtualHost *:80>
 	ProxyPreserveHost On
 	# TODO: Put simple_api in .env --> compose
-	ProxyPass "/" "http://simple_api:8080/"
-	ProxyPassReverse "/" "http://simple_api:8080/"
+	ProxyPass "/" "http://${PAGE_NAME}:8080/"
+	ProxyPassReverse "/" "http://${PAGE_NAME}:8080/"
 </VirtualHost>
 
 LoadModule proxy_module modules/mod_proxy.so
