--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,5 @@ jobs:
 
      #finally build your app with the latest command
       - name: Build and test with Maven
-        run: mvn clean verify --file TP1/BackendAPI/notsosimpleapi/pom.xml
+        working-directory: TP2/BackendAPI/notsosimpleapi/
+        run: mvn clean verify --file pom.xml
