--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,44 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-        #TODO
-
      #finally build your app with the latest command
       - name: Build and test with Maven
         working-directory: TP1/BackendAPI/notsosimpleapi/
         run: mvn clean verify --file pom.xml
+
+  # define job to build and publish docker image
+  build-and-push-docker-image:
+    runs-on: ubuntu-24.04
+    # run only when code is compiling and tests are passing
+    needs: test-backend
+
+    # steps to perform in job
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build image and push backend
+        uses: docker/build-push-action@v6
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: TP1/BackendAPI/notsosimpleapi/
+          # Note: tags has to be all lower-case
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api:latest
+
+      - name: Build image and push database
+        uses: docker/build-push-action@v6
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: TP1/Postgres/
+          # Note: tags has to be all lower-case
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-database:latest
+          # DO the same for database
+
+      - name: Build image and push httpd
+        uses: docker/build-push-action@v6
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: TP1/HTTPServer/
+          # Note: tags has to be all lower-case
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-httpd:latest
+
