--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           # relative path to the place where source code with Dockerfile is located
           context: TP1/BackendAPI/notsosimpleapi/
           # Note: tags has to be all lower-case
-          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api:latest
+          tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops-simple-api:latest
 
       - name: Build image and push database
         uses: docker/build-push-action@v6
@@ -49,7 +49,7 @@ jobs:
           # relative path to the place where source code with Dockerfile is located
           context: TP1/Postgres/
           # Note: tags has to be all lower-case
-          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-database:latest
+          tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops-database:latest
           # DO the same for database
 
       - name: Build image and push httpd
@@ -58,5 +58,5 @@ jobs:
           # relative path to the place where source code with Dockerfile is located
           context: TP1/HTTPServer/
           # Note: tags has to be all lower-case
-          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-httpd:latest
+          tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops-httpd:latest
 
