--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,11 @@ jobs:
         working-directory: TP1/BackendAPI/notsosimpleapi/
         run: mvn clean verify --file pom.xml
 
+      - name: Verify with Sonar
+        working-directory: TP1/BackendAPI/notsosimpleapi/
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECTKEY}} -Dsonar.organization=${{vars.SONAR_ORGANIZATION}} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file pom.xml
+
+
   # define job to build and publish docker image
   build-and-push-docker-image:
     runs-on: ubuntu-24.04
