--- a/TP3/ansible/roles/database/tasks/main.yml
+++ b/TP3/ansible/roles/database/tasks/main.yml
@@ -6,9 +6,12 @@
     name: database
     image: ilovedockingandfrotting/tp-devops-database
     state: started
+    restart_policy: on-failure
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - name: app-network
     env:
       POSTGRES_DB: "{{ DB_NAME }}"
-      POSTGRES_USER: "{{ DB_NAME }}"
+      POSTGRES_USER: "{{ DB_USERNAME }}"
       POSTGRES_PASSWORD: "{{ DB_PASSWORD }}"
