holy shit it works

--- a/TP3/ansible/roles/app/tasks/main.yml
+++ b/TP3/ansible/roles/app/tasks/main.yml
@@ -13,5 +13,5 @@
     env:
       DB_SERVER: "database"
       DB_NAME: "{{ DB_NAME }}"
-      DB_USERNAME: "{{ DB_NAME }}"
+      DB_USERNAME: "{{ DB_USERNAME }}"
       DB_PASSWORD: "{{ DB_PASSWORD }}"
