CHECK ça mon reuf

--- a/TP3/ansible/playbook.yml
+++ b/TP3/ansible/playbook.yml
@@ -12,7 +12,9 @@
     DB_PASSWORD: "{{ VAULT_DB_PASSWORD }}"
 
   roles:
+    - env
     - docker
+    - volume
     - network
     - database
     - app
