--- a/TP3/ansible/roles/network/tasks/main.yml
+++ b/TP3/ansible/roles/network/tasks/main.yml
@@ -1,7 +1,12 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # tasks file for roles/network
-- name: Create Docker network
+- name: Create Docker app-network
   community.docker.docker_network:
     name: app-network
+    state: present
+
+- name: Create Docker proxy-network
+  community.docker.docker_network:
+    name: proxy-network
     state: present
