--- a/TP3/ansible/roles/env/tasks/main.yml
+++ b/TP3/ansible/roles/env/tasks/main.yml
@@ -1,6 +1,11 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # tasks file for roles/env
+- name: Debug
+  debug: 
+    msg: "{{ DB_SERVER }} {{ DB_NAME }} {{ DB_USERNAME }} {{ DB_PASSWORD }}"
+  
+
 - name: Copy .env file to server
   copy:
     src: .env
