--- a/TP3/ansible/playbook.yml
+++ b/TP3/ansible/playbook.yml
@@ -11,6 +11,9 @@
     DB_USERNAME: "{{ VAULT_DB_USERNAME }}"
     DB_PASSWORD: "{{ VAULT_DB_PASSWORD }}"
 
+  pre_tasks:
+    - msg: "{{ VAULT_DB_SERVER }}"
+
   roles:
     - env
     - docker
