--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,27 +6,27 @@ on:
   pull_request:
 
 jobs:
-  test-backend: 
-    runs-on: ubuntu-24.04
-    steps:
-     #checkout your github code using actions/checkout@v4
-      - uses: actions/checkout@v4
+  # test-backend: 
+  #   runs-on: ubuntu-24.04
+  #   steps:
+  #    #checkout your github code using actions/checkout@v4
+  #     - uses: actions/checkout@v4
 
-     #do the same with another action (actions/setup-java@v4) that enable to setup jdk 21
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '21'
+  #    #do the same with another action (actions/setup-java@v4) that enable to setup jdk 21
+  #     - name: Set up JDK 21
+  #       uses: actions/setup-java@v4
+  #       with:
+  #         distribution: 'temurin'
+  #         java-version: '21'
 
-     #finally build your app with the latest command
-      - name: Build and test with Maven
-        working-directory: TP1/BackendAPI/notsosimpleapi/
-        run: mvn clean verify --file pom.xml
+  #    #finally build your app with the latest command
+  #     - name: Build and test with Maven
+  #       working-directory: TP1/BackendAPI/notsosimpleapi/
+  #       run: mvn clean verify --file pom.xml
 
-      - name: Verify with Sonar
-        working-directory: TP1/BackendAPI/notsosimpleapi/
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECTKEY}} -Dsonar.organization=${{vars.SONAR_ORGANIZATION}} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file pom.xml
+  #     - name: Verify with Sonar
+  #       working-directory: TP1/BackendAPI/notsosimpleapi/
+  #       run: mvn -B verify sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECTKEY}} -Dsonar.organization=${{vars.SONAR_ORGANIZATION}} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file pom.xml
 
   # define job to build and publish docker image
   # build-and-push-docker-image:
@@ -80,8 +80,8 @@ jobs:
     runs-on: ubuntu-24.04
     env:
       ANSIBLE_VAULT_PASSWORD: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
-    needs:
-      test-backend
+    # needs:
+    #   test-backend
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
