--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,8 +84,8 @@ jobs:
       - name: judge of hell gabriel save me 
         uses: gbh-tech/ansible-deployment-action@v0.0.4
         with:
-          context: TP3/ansible/
           playbook_path: '.'
+          workdir: 'TP3/ansible'
           ansible_vault_password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
 
 
