--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           playbook_path: '.'
           playbook_name: 'playbook.yml'
-          workdir: 'TP3/ansible'
+          workdir: 'TP3/'
           ansible_vault_password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
 
 
