--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,6 +81,9 @@ jobs:
     # needs:
     #   test-backend
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - run: ls
 
       - name: judge of hell gabriel save me 
