--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,85 +6,85 @@ on:
   pull_request:
 
 jobs:
-  # test-backend: 
-  #   runs-on: ubuntu-24.04
-  #   steps:
-  #    #checkout your github code using actions/checkout@v4
-  #     - uses: actions/checkout@v4
-
-  #    #do the same with another action (actions/setup-java@v4) that enable to setup jdk 21
-  #     - name: Set up JDK 21
-  #       uses: actions/setup-java@v4
-  #       with:
-  #         distribution: 'temurin'
-  #         java-version: '21'
-
-  #    #finally build your app with the latest command
-  #     - name: Build and test with Maven
-  #       working-directory: TP1/BackendAPI/notsosimpleapi/
-  #       run: mvn clean verify --file pom.xml
-
-  #     - name: Verify with Sonar
-  #       working-directory: TP1/BackendAPI/notsosimpleapi/
-  #       run: mvn -B verify sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECTKEY}} -Dsonar.organization=${{vars.SONAR_ORGANIZATION}} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file pom.xml
-
-  # # define job to build and publish docker image
-  # build-and-push-docker-image:
-  #   runs-on: ubuntu-24.04
-  #   # run only when code is compiling and tests are passing
-  #   needs: test-backend
-
-  #   # steps to perform in job
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Login to DockerHub
-  #       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username ${{ vars.DOCKER_USERNAME }} --password-stdin
-
-  #     - name: Build image and push backend
-  #       uses: docker/build-push-action@v6
-  #       with:
-  #         # relative path to the place where source code with Dockerfile is located
-  #         context: TP1/BackendAPI/notsosimpleapi/
-  #         options: "--env-file ../../.env"
-  #         # Note: tags has to be all lower-case
-  #         tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-simple-api:latest
-  #         # build on feature branches, push only on main branch
-  #         push: ${{ github.ref == 'refs/heads/main' }}
-
-
-  #     - name: Build image and push database
-  #       uses: docker/build-push-action@v6
-  #       with:
-  #         # relative path to the place where source code with Dockerfile is located
-  #         context: TP1/Postgres/
-  #         # Note: tags has to be all lower-case
-  #         tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-database:latest
-  #         # DO the same for database
-  #             # build on feature branches, push only on main branch
-  #         push: ${{ github.ref == 'refs/heads/main' }}
-
-
-  #     - name: Build image and push httpd
-  #       uses: docker/build-push-action@v6
-  #       with:
-  #         # relative path to the place where source code with Dockerfile is located
-  #         context: TP1/HTTPServer/
-  #         # Note: tags has to be all lower-case
-  #         tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-httpd:latest
-  #             # build on feature branches, push only on main branch
-  #         push: ${{ github.ref == 'refs/heads/main' }}
-
-  push-to-ansible:
+  test-backend: 
     runs-on: ubuntu-24.04
-    # needs:
-    #   test-backend
+    steps:
+     #checkout your github code using actions/checkout@v4
+      - uses: actions/checkout@v4
+
+     #do the same with another action (actions/setup-java@v4) that enable to setup jdk 21
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+     #finally build your app with the latest command
+      - name: Build and test with Maven
+        working-directory: TP1/BackendAPI/notsosimpleapi/
+        run: mvn clean verify --file pom.xml
+
+      - name: Verify with Sonar
+        working-directory: TP1/BackendAPI/notsosimpleapi/
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECTKEY}} -Dsonar.organization=${{vars.SONAR_ORGANIZATION}} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file pom.xml
+
+  # define job to build and publish docker image
+  build-and-push-docker-image:
+    runs-on: ubuntu-24.04
+    # run only when code is compiling and tests are passing
+    needs: test-backend
+
+    # steps to perform in job
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: judge of hell gabriel save me 
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username ${{ vars.DOCKER_USERNAME }} --password-stdin
+
+      - name: Build image and push backend
+        uses: docker/build-push-action@v6
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: TP1/BackendAPI/notsosimpleapi/
+          options: "--env-file ../../.env"
+          # Note: tags has to be all lower-case
+          tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-simple-api:latest
+          # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+
+
+      - name: Build image and push database
+        uses: docker/build-push-action@v6
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: TP1/Postgres/
+          # Note: tags has to be all lower-case
+          tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-database:latest
+          # DO the same for database
+              # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+
+
+      - name: Build image and push httpd
+        uses: docker/build-push-action@v6
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: TP1/HTTPServer/
+          # Note: tags has to be all lower-case
+          tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-httpd:latest
+              # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+
+  push-to-ansible:
+    runs-on: ubuntu-24.04
+    needs:
+      test-backend
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Playbook 
         uses: dawidd6/action-ansible-playbook@v5
         with:
           playbook: playbook.yml
