--- a/TP3/ansible/roles/proxy/tasks/main.yml
+++ b/TP3/ansible/roles/proxy/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Run HTTPD
   docker_container:
     name: httpd
-    image: ilovedockingandfrotting/tp-devops-httpd
+    image: ilovedockingandfrotting/tp-devops-httpd:latest
     restart_policy: no
     networks:
       - name: proxy-network
