--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
           # relative path to the place where source code with Dockerfile is located
           context: TP1/HTTPServer/
           # Note: tags has to be all lower-case
-          tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-httpd:latest
+          tags:  ${{vars.DOCKER_USERNAME}}/tp-devops-httpd2:latest
               # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
 
